# artifacts/api-server/src/routes/index.ts
@@ -4,6 +4,8 @@ import offersRouter from "./offers";
 import destinationsRouter from "./destinations";
 import programsRouter from "./programs";
 import visasRouter from "./visas";
+import visaCountriesRouter from "./visaCountries";
+import visaCustomFieldsRouter from "./visaCustomFields";
 import visaApplicationsRouter from "./visaApplications";
 import storageRouter from "./storage";
 import bookingsRouter from "./bookings";
@@ -22,6 +24,8 @@ router.use(flightsRouter);
 router.use(offersRouter);
 router.use(destinationsRouter);
 router.use(programsRouter);
+router.use(visaCountriesRouter);
+router.use(visaCustomFieldsRouter);
 router.use(visasRouter);
 router.use(visaApplicationsRouter);
 router.use(storageRouter);
